# Qt5Ogre21

./: CMakeLists.txt
Qt5Ogre21/: CMakeLists.txt  qogreviewport.cpp  qogreviewport.h  qtogre21.cpp  qtogre21.h  somecustomwidget.cpp  somecustomwidget.h  test.cpp
